syntax = "proto3";
package main;

message Nil {

}

message Key {
    string key = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message OprationResult {
    string activeIp = 4;
}

message Result {
    string value = 1;
    bool missCache = 2;
    string activeIp = 4;
}

service CacheService {
    rpc Get(Key) returns (Result) {}
    rpc Put(KeyValue) returns (OprationResult) {}
    rpc Clear(Nil) returns (OprationResult) {}
}